<resources>
    <!--Opções Spinner intervalo dos medicamentos-->
    <string-array name="unidade_intervalo">
        <item>h</item>
        <item>Dia</item>
    </string-array>

    <!--Opções Spinner status dos medicamentos-->
    <string-array name="status_med">
        <item>Inativo</item> <!--Cor cinza-->
        <item>Administrado</item> <!--Cor rosa-->
        <item>No Horário</item>  <!-- verde -->
        <item>Adiantado</item> <!-- Azul -->
        <item>Pendente</item> <!--Cor vermelha-->
    </string-array>

    <!--Opções Spinner status das consultas-->
    <string-array name="status_consultas">
        <item>Inativo</item>
        <item>Ativo</item>
        <item>Finalizado</item>
        <item>Pendente</item>
    </string-array>

    <!--    <string-array name="status_terapia">-->
    <!--        <item>Inativo</item>-->
    <!--        <item>Ativo</item>-->
    <!--        <item>Finalizado</item>-->
    <!--        <item>Pendente</item>-->
    <!--    </string-array>-->

    <!--Opções Spinner unidade dos medicamentos-->
    <string-array name="unidades_medicamentos">
        <item>mg</item>
        <item>ml</item>
        <item>comp</item>
        <item>grama</item>
        <item>ml</item>
        <item>gotas</item>
        <item>microgotas</item>
        <item>cáp</item>
        <item>inj</item>
    </string-array>

    <!--Opções Spinner via de administração dos medicamentos-->
    <string-array name="op_via">
        <item>Oral</item>
        <item>Intramuscular</item>
        <item>Dermatológica</item>
        <item>Nasal</item>
        <item>Subcutânea</item>
        <item>Inalatoriapor via nasal</item>
        <item>Inalatoria por via oral</item>
        <item>Vaginal</item>
        <item>Oftalmica</item>
        <item>Otológica</item>
        <item>Intravenosa</item>
        <item>Retal</item>
        <item>Sublingual</item>
        <item>Intra articular</item>
        <item>Intra arterial</item>
        <item>Intradermica</item>
        <item>Parenteral</item>
        <item>Local</item>
        <item>Capilar</item>
        <item>Intrauterina</item>
        <item>Irrigação</item>
    </string-array>

    <!--Opções Spinner do diario de cuidado-->
    <string-array name="acao">
        <item>Atividade</item>
        <item>Alimentação</item>
    </string-array>

    <!--Campos vazios-->
    <string name="hr_vazio">Informe um horário</string>
    <string name="cuidador_vazio">Informe um cuidador</string>
    <string name="campos_atividade_vazios">Preencha ao menos um campo</string>
    <string name="emailVazio">Digite um e-mail</string>

    <!--Ações bem sucedidas-->
    <string name="diarioCad">Diário de cuidado cadastrado com sucesso</string>
    <string name="loginFeitoComSucesso">Login efetuado com sucesso</string>
    <string name="idosoCadComSucesso">Cadastro realizado com sucesso</string>
    <string name="dadosAtualizados">Dados atualizados com sucesso</string>
    <string name="emailEnviado">O email foi enviado! Verifique sua caixa de spam</string>
    <string name="excluidoComSucesso">Excluido com sucesso!</string>
    <string name="operacaoCancelada">Operação Cancelada!</string>

    <!--Ações mal sucedidas-->
    <string name="falhaAoAtualizarDados">Falha ao atualizar dados</string>
    <string name="falhaAoCadastrar">Não foi possível realizar cadastro</string>
    <string name="emailInex">Este E-mail não existe</string>
    <string name="falhaAoLogar">Não foi possível realizar login</string>
    <string name="falhaAoEditar">Não foi possível editas os dados</string>

    <!--Alertas-->
    <string name="diarioJaCad">Um diário de cuidado já foi feito no dia</string>
    <string name="nomeMedNaoInform">O nome do medicamento não foi informado</string>
    <string name="concMedNaoInform">A concentração do medicamento não foi informada</string>
    <string name="recMedNaoInform">A recomendação/finalidade do medicamento não foi informada</string>
    <string name="doseMedNaoInform">A dose do medicamento não foi informada</string>
    <string name="intervMedNaoInform">O intervalo do medicamento não foi informado</string>
    <string name="intervMedMaiorQue24">O intervalo do medicamento informado é maior que 24, use o intervalo em dias</string>
    <string name="intervMedInvalido">O intervalo do medicamento informado é inválido</string>
    <string name="nomeHospInv">O nome do hospital pode não conter menos de 3 letras</string>
    <string name="hrInicMedNaoInform">O horário inicial do medicamento não foi informado</string>
    <string name="dataInicMedNaoInform">A data inicial do medicamento não foi informada</string>
    <string name="dataFimMedNaoInform">A data final do medicamento não foi informada</string>
    <string name="senhaInv">Senha inválida! Digite uma senha com mais de 6 caracteres</string>
    <string name="emailInv">E-mail inválido</string>
    <string name="contaExistente">Esta conta já existe</string>
    <string name="senhaIncorreta">Senha incorreta</string>
    <string name="camposVazios">Preencha todos os campos</string>
    <string name="nomeMedInvalido">O nome do medicamento não pode conter menos que 3 letras</string>
    <string name="senhasDiferentes">Senhas não conferem</string>
    <string name="nomeInv">Digite um nome com mais de três letras</string>
    <string name="nenhumDiaSemanaSel">Nenhum dia da semana foi selecionado</string>
    <string name="telInv">Digite um telefone válido</string>
    <string name="endInv">Digite um endereço válido</string>
    <string name="profInv">Digite um nome de um profissional válido</string>

    <!--Nenhum registro-->
    <string name="nenhumCadIdoso">Nenhum idoso cadastrado</string>
    <string name="nenhumaMsg">Nenhuma mensagem foi encontrada</string>
    <string name="nenhumDiaCad">Nenhum Diário de cuidado cadastrado</string>

    <!--Campos-->
    <string name="mensagem">Digite uma mensagem</string>
    <string name="cuidadorResp">Cuidador Responsável</string>
    <string name="recomendacao">Recomendação/Finalidade</string>
    <string name="nome_idoso">Nome idoso</string>
    <string name="concentracao">Concentração</string>
    <string name="sono">Sono</string>
    <string name="exercicios">Exercícios</string>
    <string name="passeio">Passeio</string>
    <string name="saude">Saúde</string>
    <string name="refeicao">Refeição Principal</string>
    <string name="lanche">Lanche</string>
    <string name="outro">Outro</string>
    <string name="obs">Observações</string>
    <string name="nome">Nome</string>
    <string name="data">Data</string>
    <string name="data_fim">Data fim</string>
    <string name="data_inicio">Data início</string>
    <string name="data_nasc">Data de nascimento</string>
    <string name="hospital">Hospital</string>
    <string name="telefone">Telefone</string>
    <string name="data_renovar_receita">Data para renovar receita</string>
    <string name="endereco">Endereço</string>
    <string name="horario">Horário</string>
    <string name="dose">Dose</string>
    <string name="intervalo">Intervalo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="medicamento">Medicamento</string>
    <string name="profissional">Profissional</string>
    <string name="hora_inicial">Hora inicial</string>

    <!--Textos textView-->
    <string name="filtro_rv">Filtrar por:</string>
    <string name="atualizarFoto">Atualizar foto</string>
    <string name="recuperar_senha">Esqueceu sua senha?</string>
    <string name="foto">Adicionar foto</string>
    <string name="via">Via de administração</string>
    <string name="fazer_login">Logar-se</string>

    <!--Textos botões-->
    <string name="entrar">Entrar</string>
    <string name="fazer_cadastro">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="enviar">Enviar</string>

    <!--Texto ActionBar-->
    <string name="ver_perfil">Ver perfil</string>
    <string name="cadastrar_medicamento">Cadastrar Medicamento</string>
    <string name="cadastrar_receita">Cadastrar Receita</string>
    <string name="cadastrar_diario">Cadastrar Diário de Cuidado</string>
    <string name="cadastrar_terapia">Cadastrar Terapia</string>
    <string name="cadastrar_consulta">Cadastrar Consulta</string>
    <string name="cadastrar_idoso">Cadastrar Idoso</string>
    <string name="atividades_diarias">Atividades Diárias:</string>
    <string name="perfil">Perfil</string>
    <string name="idosos_cadastrados">Tela inicial</string>
    <string name="cadastrar_alimentacao">Cadastrar Alimentação</string>

    <!--Nome aplicativo-->
    <string name="app_name">DoseApp</string>

    <!--Texto switch-->
    <string name="lembre_me">Definir Alarme</string>

    <!--Texto RadioButton / checkBox-->
    <string name="genero">Gênero:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="uso_continuo">Uso contínuo</string>

    <string name="sharedPrefesAlarme">SharedPreferencesAlarme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tela_cadastro_receita">telaCadastroReceita</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>