<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaCadastroConsulta"
    android:orientation="vertical"
    android:background="@color/light_blue"
    >

    <EditText
        style="@style/Edit_text"
        android:hint="@string/nome"
        android:maxLength="250"
        android:inputType="textPersonName"
        android:id="@+id/et_nomeConsulta"
        />

    <EditText
        android:maxLength="250"
        style="@style/Edit_text"
        android:hint="@string/profissional"
        android:inputType="textPersonName"
        android:id="@+id/et_profissionalConsulta"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/endereco"
        android:maxLength="250"
        android:inputType="textPersonName"
        android:id="@+id/et_enderecoConsulta"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:maxLength="11"
        android:id="@+id/et_telefoneConsulta"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/data"
        android:inputType="date"
        android:maxLength="8"
        android:id="@+id/et_dataConsulta"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/horario"
        android:maxLength="4"
        android:inputType="time"
        android:id="@+id/et_horarioConsulta"
        />

    <Switch
        style="@style/Switch"
        android:id="@+id/swt_lembreConculta"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:text="@string/salvar"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_salvarConsulta"
        />

    </LinearLayout>