<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue"
    tools:context=".telaCadastroDiarioAlimentacao">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_diaTurnoDiarioEt03"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atividades_diarias"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/sono"
        android:id="@+id/et_sonoDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/exercicios"
        android:id="@+id/et_exercicioDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/passeio"
        android:id="@+id/et_passeioDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/saude"
        android:id="@+id/et_saudeDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/outro"
        android:id="@+id/et_outrosDiarioEt03"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/obs"
        android:id="@+id/et_obsDiarioEt03"
        android:inputType="textPersonName"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        style="@style/button"
        android:text="@string/salvar"
        android:id="@+id/btn_salvarDiario"
        />
</LinearLayout>
</androidx.core.widget.NestedScrollView>