<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical"
        tools:context=".telaCadastroDiarioAlimentacao">

        <EditText
            android:id="@+id/et_cuidadorResp"
            android:layout_marginTop="40dp"
            style="@style/Edit_text"
            android:hint="@string/cuidadorResp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_refeicao"
            style="@style/Edit_text"
            android:hint="@string/refeicao"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_lancheDiario"
            style="@style/Edit_text"
            android:hint="@string/lanche"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_outrosDiario"
            style="@style/Edit_text"
            android:hint="@string/outro"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/et_horarioRef"
            style="@style/Edit_text"
            android:drawableRight="@drawable/ic_watch"
            android:hint="@string/horario" />

        <EditText
            android:id="@+id/et_obsDiario"
            style="@style/Edit_text"
            android:hint="@string/obs"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvarAlimentacao"
            style="@style/button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/salvar" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>