<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical"
        tools:context=".telaCadastroTerapia">

        <EditText
            android:id="@+id/et_nomeTerapia"
            style="@style/Edit_text"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="250" />

        <EditText
            android:id="@+id/et_profissionalTerapia"
            style="@style/Edit_text"
            android:hint="@string/profissional"
            android:inputType="textPersonName"
            android:maxLength="250" />

        <EditText
            android:id="@+id/et_enderecoTerapia"
            style="@style/Edit_text"
            android:hint="@string/endereco"
            android:inputType="textPersonName"
            android:maxLength="250" />

        <EditText
            android:id="@+id/et_telefoneTerapia"
            style="@style/Edit_text"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:maxLength="11" />

        <EditText
            android:id="@+id/et_horaTerapia"
            style="@style/Edit_text"
            android:hint="@string/horario"
            android:inputType="time"
            android:maxLength="4" />

        <Switch
            android:id="@+id/swt_lembreTerapia"
            style="@style/Switch" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvarTerapia"
            style="@style/button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/salvar" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>