<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical"
        tools:context=".telaCadastroReceita">

        <EditText
            android:id="@+id/et_nomeReceita"
            style="@style/Edit_text"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            android:maxLength="250" />

        <TextView
            android:id="@+id/et_dataReceita"
            style="@style/Edit_text"
            android:layout_marginLeft="20dp"
            android:drawableRight="@drawable/ic_calendar"
            android:text="@string/data"
            android:textColor="@color/light_grey" />


        <EditText
            android:id="@+id/et_hospitalReceita"
            android:drawableRight="@drawable/ic_hospital"
            style="@style/Edit_text"
            android:hint="@string/hospital"
            android:inputType="textCapWords"
            android:maxLength="250" />

        <EditText
            android:id="@+id/et_telefoneHospital"
            style="@style/Edit_text"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:drawableRight="@drawable/ic_phone"
            />

        <EditText
            android:id="@+id/et_profissionalReceita"
            style="@style/Edit_text"
            android:hint="@string/profissional"
            android:drawableRight="@drawable/ic_profissional"
            android:inputType="textCapWords"
            android:maxLength="250" />

        <TextView
            android:id="@+id/et_dataRenReceita"
            style="@style/Edit_text"
            android:layout_marginLeft="20dp"
            android:drawableRight="@drawable/ic_calendar"
            android:text="@string/data_renovar_receita"
            android:textColor="@color/light_grey" />

        <Switch
            android:id="@+id/swt_adicionarNaAgendaReceita"
            style="@style/Switch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvarCadReceita"
            style="@style/button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/salvar" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>