<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaCadastroDiarioAlimentacao"
    android:background="@color/light_blue"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_diaTurnoDiarioEt02"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimentacao"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/refeicao"
        android:id="@+id/et_refeicao"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/lanche"
        android:id="@+id/et_lancheDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/outro"
        android:id="@+id/et_outrosDiario"
        android:inputType="textPersonName"
        />

    <EditText
        style="@style/Edit_text"
        android:hint="@string/obs"
        android:id="@+id/et_obsDiario"
        android:inputType="textPersonName"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:text="@string/salvar"
        android:id="@+id/btn_salvarAlimentacao"
        android:layout_marginTop="20dp"
        />
</LinearLayout>