<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".telaLogin">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logodoseapp" />

    <EditText
        android:id="@+id/et_email"
        style="@style/Edit_text"
        android:hint="@string/email"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/et_senha"
        style="@style/Edit_text"
        android:hint="@string/senha"
        android:maxLength="25"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        style="@style/button"
        android:text="@string/entrar"
        />

    <TextView
        android:id="@+id/txt_recuperar_senha"
        style="@style/text_view"
        android:text="@string/recuperar_senha"
        />

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/txt_fazer_cadastro"
        style="@style/text_view"
        android:text="@string/fazer_cadastro"
        android:textAllCaps="true"
        android:layout_marginBottom="30dp"
        />

</LinearLayout>
</androidx.core.widget.NestedScrollView>