<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".telaCadastroMedicamento"
    android:background="@color/light_blue">

    <EditText
        android:id="@+id/et_nomeMedicamento"
        style="@style/Edit_text"
        android:hint="@string/nome"
        android:layout_marginTop="30dp"
        android:maxLength="250"
        android:inputType="textPersonName"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/et_posologia"
            style="@style/Edit_text"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:hint="@string/posologia"
            android:maxLength="2"
            android:layout_marginRight="0dp"
            />
        <Spinner
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spiPosologia"
            android:elevation="1dp"
            />

        <EditText
            android:id="@+id/et_horaInicial"
            android:inputType="time"
            style="@style/Edit_text"
            android:maxLength="4"
            android:hint="@string/hora_inicial"
            android:layout_marginLeft="0dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_dose"
            style="@style/Edit_text"
            android:hint="@string/dose"
            android:maxLength="4"
            android:layout_width="180dp"
            android:inputType="number"
            />

        <Spinner
            android:id="@+id/spiMedicamentos"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:elevation="@dimen/fab_margin"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/et_dataInicio"
        style="@style/Edit_text"
        android:hint="@string/data_inicio"
        android:inputType="date"
        android:maxLength="8"
        />

    <EditText
        android:id="@+id/et_dataFim"
        style="@style/Edit_text"
        android:hint="@string/data_fim"
        android:inputType="date"
        android:maxLength="8"
        />

    <EditText
        android:id="@+id/et_finalidade"
        style="@style/Edit_text"
        android:hint="@string/finalidade"
        android:maxLength="350"
        android:inputType="textLongMessage"
        />

    <Switch
        style="@style/Switch"
        android:id="@+id/swt_lembreMedicamento"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:text="@string/salvar"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_salvarCadMedicamento"
        />

</LinearLayout>